# ctez-analytics-indexer

./: Dockerfile  dipdup.yml  docker-compose.yml  package.json  pyproject.toml
demo/: models.py
demo/functions/Main_stats/: history_main.py  main_history.py
demo/functions/Price_stats/: block_level.py  change_price.py  change_price_history.py  history_block_level.py  history_of_price.py  price_stats.py
demo/functions/Tvl_stats/: calculate_ctez_pool_history.py  calculate_history_pool.py  calculate_history_pool_ctez.py  calculate_history_tvl.py  calculate_pool_history.py  calculate_tvl.py  calculate_tvl_history.py  dollar.py  history_dollar.py
demo/functions/Volume_stats/: buy_sell_volume.py  calculate_buy_volume_ctez.py  calculate_history_buy_volume.py  calculate_history_sell_volume.py  calculate_sell_volume_ctez.py  ctez_volume_days.py  history_of_volume.py
demo/functions/Weekly/Main_data_stats/: calculate_history_weekly_monthly_maindata.py
demo/handlers/: add_liquidity.py  on_asset_update.py  on_cash_to_token.py  on_deposit.py  on_liquidate.py  on_mint_or_burn.py  on_oven_update.py  on_token_to_cash.py  on_withdraw.py  remove_liquidity.py
demo/hooks/: calculate_history_main_data.py  calculate_history_price.py  calculate_history_tvl_data.py  calculate_history_volume.py  calculate_main_data.py  calculate_price_stats.py  calculate_tvl_data.py  calculate_volume_stats.py  on_index_rollback.py
demo/types/ctez_admin/: storage.py
demo/types/ctez_lp/: storage.py
demo/types/ctez_main/: storage.py
demo/types/ctez_swap/: storage.py
(+12 files in other folders)
