[tool.poetry]
name = "ctez-indexer"
version = "0.1.0"
description = ""
authors = ["Karantezsure <karan@tezsure>"]

[tool.poetry.dependencies]
python = "^3.10"
dipdup = "^5.1.6"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
